--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 streamlit
-yfinance
+torch
+torchvision
+torchaudio
+numpy
 pandas
-cufflinks
-datetime
-fbprophet
-plotly
-requests
-beautifulsoup4
+yfinance
+scikit-learn
+matplotlib
+statsmodels
+prophet
+cmdstanpy
